# helsing-tattico-solution

./: .gitignore  README.md  pyproject.toml  requirements.txt  simulation_pb2.py
src/: baseline.py  main.py  navigation.py  radar.py  run_simulation.py  simulation.proto  simulation_controller.py  simulation_pb2.py  simulation_pb2.pyi  simulation_pb2_grpc.py  simulator.py  units.py  utils.py  websocket_server.py
ui/radar-ui/: package-lock.json  package.json
ui/radar-ui/src/app/: layout.tsx  page.tsx
ui/radar-ui/src/components/: radar-display.tsx
ui/radar-ui/src/lib/: websocket.ts
