[tool.poetry]
name = "helsing-solution"
version = "0.1.0"
description = ""
authors = ["calebgcc <calebgucciardi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
protobuf = "^6.30.2"


[tool.poetry.group.dev.dependencies]
mypy-protobuf = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
